# BlackSwan

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE_ENGINE_UPGRADE.md  LICENSE  README.md
.github/workflows/: blackswan-ci.yml  workflow.yml
contract/: schema.json
core/: .coverage  README.md  pyproject.toml
core/blackswan/: _render.py  cli.py  mcp_server.py  sarif.py
core/blackswan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
core/blackswan/attribution/: traceback.py
core/blackswan/detectors/: base.py  matrix.py  numerical.py  portfolio.py
core/blackswan/engine/: adversarial.py  cluster.py  hooks.py  importance.py  perturbation.py  replay.py  repro.py  runner.py  shrink.py  tracer.py  validator.py
core/blackswan/fixer/: __init__.py  guards.py
core/blackswan/parser/: ast_analyzer.py  auto_tagger.py  graph.py
core/blackswan/scenarios/: registry.py
core/blackswan/scenarios/presets/: correlation_breakdown.yaml  liquidity_crash.yaml  missing_data.yaml  rate_shock.yaml  vol_spike.yaml
core/tests/: test_adversarial.py  test_auto_tagging.py  test_cli.py  test_cli_phases.py  test_detectors.py  test_fixer.py  test_graph.py  test_importance.py  test_new_detectors.py  test_perturbation.py  test_runner.py  test_scenarios.py  test_traceback.py  test_trigger_disclosure.py  test_two_path.py  test_validator.py
core/tests/fixtures/: always_fails.py  broken_covariance.py  clean_model.py  division_edge.py  overflow_leverage.py  simple_portfolio.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  ROADMAP.md  SCENARIOS.md  index.html
extension/: .vscodeignore  blackswan-vscode-0.3.0.vsix  blackswan-vscode-0.4.0.vsix  package-lock.json  package.json  tsconfig.json
extension/__mocks__/: vscode.ts
extension/src/: aiExplainer.ts  bridge.ts  codelens.ts  dagPanel.ts  diagnostics.ts  extension.ts  fixer.ts  hover.ts  orchestrator.ts  progress.ts  types.ts
extension/test/: aiExplainer.integration.test.ts  aiExplainer.test.ts  bridge.test.ts  codelens.test.ts  dagPanel.test.ts  diagnostics.test.ts  fixer.integration.test.ts  fixer.test.ts  hover.test.ts  orchestrator.test.ts  progress.test.ts
