[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackswan"
version = "0.3.0"
description = "Stress-test mathematical and financial logic in Python code — find the exact line where models break."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Ryan Qi" },
]
keywords = [
    "stress-testing",
    "quantitative-finance",
    "risk-model",
    "monte-carlo",
    "numerical-stability",
    "financial-modeling",
    "genetic-algorithm",
    "adversarial-testing",
    "debugger",
    "var",
    "covariance",
    "portfolio-risk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
# Install with: pip install blackswan[fixer]
fixer = [
    "libcst>=1.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "build>=1.0",
    "twine>=5.0",
    "libcst>=1.1",
]

[project.urls]
Homepage      = "https://github.com/Lushenwar/BlackSwan"
Repository    = "https://github.com/Lushenwar/BlackSwan"
Documentation = "https://github.com/Lushenwar/BlackSwan/blob/main/docs/ARCHITECTURE.md"
Changelog     = "https://github.com/Lushenwar/BlackSwan/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/Lushenwar/BlackSwan/issues"

[project.scripts]
blackswan = "blackswan.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
blackswan = ["scenarios/presets/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=blackswan --cov-report=term-missing"

[tool.coverage.run]
source = ["blackswan"]
omit = ["tests/*"]
